--- a/マイサイト.css
+++ b/マイサイト.css
@@ -109,3 +109,110 @@ p4{
 }
 
 }
+
+.header{
+  height:45px;
+  background-color: white;
+  padding:0;
+  margin:20px;
+  border:solid;
+  border-color: white;
+  border-radius: 10px;
+  box-shadow: 5px 5px 7px #666666
+}
+
+.header-logo{
+  text-align: center;
+  margin-top: 6px;
+  font-size: 24px;
+  font-weight: bold;
+
+
+}
+
+.b1{
+  background-color: white;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding-top: 2px;
+  text-align: center;
+}
+
+.b2{
+  background-color: white;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding-top: 2px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.b3{
+  background-color: white;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding-top: 2px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+
+
+.class1{
+margin-left: 5px;
+margin-right: 5px;
+margin-bottom: 10px;
+  }
+
+.class2{
+  margin-left: 5px;
+  margin-bottom: 19px;
+}
+
+.a1{
+  margin-right: 0px;
+}
+
+.footer{
+  height:90px;
+  margin: 15px;
+  margin-top: 30px;
+  padding: 15px;
+  background-color:gray;
+  border-radius: 10px;
+  box-shadow: 4px 4px 7px #666666
+}
+
+
+p1{
+  color: white;
+  font-weight: bold;
+  text-shadow: 2px 2px 5px #ffffff
+}
+
+p{
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0;
+
+}
+
+p4{
+ text-align: left;
+ }
+
+.main{
+  height:750px;
+  background-color: #cccccc;
+  margin:10px;
+  border:solid;
+  border-radius: 10px;
+  border-color: #cccccc;
+  box-shadow: 5px 5px 7px #666666
+}
